--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -271,20 +271,6 @@ rules:
 - apiGroups:
   - windtunnel.plantd.org
   resources:
-  - digitaltwins/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - windtunnel.plantd.org
-  resources:
-  - digitaltwins/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - windtunnel.plantd.org
-  resources:
   - experiments
   verbs:
   - create
@@ -376,6 +362,44 @@ rules:
   - windtunnel.plantd.org
   resources:
   - schemas
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - simulations
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - simulations/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - simulations/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - trafficmodels
   verbs:
   - create
   - delete
