--- a/config/samples/windtunnel_v1alpha1_digitaltwin.yaml
+++ b/config/samples/windtunnel_v1alpha1_digitaltwin.yaml
@@ -11,4 +11,4 @@ metadata:
 spec:
   modelType: "quickscaling"
   loadPatternNames: "ubi-chris-test.loadpattern"
-  experimentNames: "ubi-chris-test.exp-test-3"
+  experimentNames: "ubi-chris-test.exp-pipeline-5"
