enable in-cluster cost calculation during simulation

--- a/config/samples/incluster/windtunnel_v1alpha1_digitaltwin.yaml
+++ b/config/samples/incluster/windtunnel_v1alpha1_digitaltwin.yaml
@@ -7,8 +7,8 @@ metadata:
     app.kubernetes.io/part-of: plantd-operator
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: plantd-operator
-  name: digitaltwin-sample
+  name: digitaltwin-incluster
 spec:
   modelType: "quickscaling"
-  loadPatternNames: "ubi-chris-test.loadpattern"
+  loadPatternNames: "test-pipeline.loadpattern-test-pipeline"
   experimentNames: "test-pipeline.experiment-test-pipeline"
