--- a/config/plantd/config.yaml
+++ b/config/plantd/config.yaml
@@ -6,7 +6,7 @@ costService:
   requests.cpu: 300m
   limits.cpu: 500m
 digitalTwin:
-  image: ghcr.io/carnegiemellon-plantd/digitaltwin:v0.0.3
+  image: ghcr.io/carnegiemellon-plantd/digitaltwin:v0.0.4 # v0.0.3 is the stable version
   requests.cpu: 300m
   limits.cpu: 500m
 dataGenerator:
