--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 images:
 - name: controller
   newName: ghcr.io/carnegiemellon-plantd/plantd-controller
-  newTag: digitaltwin1
+  newTag: latest
