--- a/bundle.yaml
+++ b/bundle.yaml
@@ -54,7 +54,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: Spec defines the specifictions of the CostExporter.
+            description: Spec defines the specifications of the CostExporter.
             properties:
               cloudServiceProvider:
                 description: CloudServiceProvider defines the target cloud service
@@ -207,9 +207,8 @@ spec:
                 format: int32
                 type: integer
               parallelJobs:
-                description: 'ParallelJobs defines the number of parallel jobs when
-                  generating the dataset. TODO: Infer the optimal number of parallel
-                  jobs automatically.'
+                description: ParallelJobs defines the number of parallel jobs when
+                  generating the dataset.
                 format: int32
                 type: integer
               schemas:
@@ -321,19 +320,144 @@ spec:
           metadata:
             type: object
           spec:
-            description: DigitalTwinSpec defines the desired state of DigitalTwin
+            description: Spec defines the specifications of the DigitalTwin.
             properties:
-              experimentNames:
-                type: string
-              loadPatternNames:
-                type: string
+              experiments:
+                description: Experiments contains the list of Experiment object references
+                  for the DigitalTwin.
+                items:
+                  description: "ObjectReference contains enough information to let
+                    you inspect or modify the referred object. --- New uses of this
+                    type are discouraged because of difficulty describing its usage
+                    when embedded in APIs. 1. Ignored fields.  It includes many fields
+                    which are not generally honored.  For instance, ResourceVersion
+                    and FieldPath are both very rarely valid in actual usage. 2. Invalid
+                    usage help.  It is impossible to add specific help for individual
+                    usage.  In most embedded usages, there are particular restrictions
+                    like, \"must refer only to types A and B\" or \"UID not honored\"
+                    or \"name must be restricted\". Those cannot be well described
+                    when embedded. 3. Inconsistent validation.  Because the usages
+                    are different, the validation rules are different by usage, which
+                    makes it hard for users to predict what will happen. 4. The fields
+                    are both imprecise and overly precise.  Kind is not a precise
+                    mapping to a URL. This can produce ambiguity during interpretation
+                    and require a REST mapping.  In most cases, the dependency is
+                    on the group,resource tuple and the version of the actual struct
+                    is irrelevant. 5. We cannot easily change it.  Because this type
+                    is embedded in many locations, updates to this type will affect
+                    numerous schemas.  Don't make new APIs embed an underspecified
+                    API type they do not control. \n Instead of using this type, create
+                    a locally provided and used type that is well-focused on your
+                    reference. For example, ServiceReferences for admission registration:
+                    https://github.com/kubernetes/api/blob/release-1.17/admissionregistration/v1/types.go#L533
+                    ."
+                  properties:
+                    apiVersion:
+                      description: API version of the referent.
+                      type: string
+                    fieldPath:
+                      description: 'If referring to a piece of an object instead of
+                        an entire object, this string should contain a valid JSON/Go
+                        field access statement, such as desiredState.manifest.containers[2].
+                        For example, if the object reference is to a container within
+                        a pod, this would take on a value like: "spec.containers{name}"
+                        (where "name" refers to the name of the container that triggered
+                        the event) or if no container name is specified "spec.containers[2]"
+                        (container with index 2 in this pod). This syntax is chosen
+                        only to have some well-defined way of referencing a part of
+                        an object. TODO: this design is not final and this field is
+                        subject to change in the future.'
+                      type: string
+                    kind:
+                      description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                      type: string
+                    name:
+                      description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                      type: string
+                    namespace:
+                      description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                      type: string
+                    resourceVersion:
+                      description: 'Specific resourceVersion to which this reference
+                        is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                      type: string
+                    uid:
+                      description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                      type: string
+                  type: object
+                  x-kubernetes-map-type: atomic
+                type: array
+              loadPatterns:
+                description: LoadPatterns contains the list of LoadPattern object
+                  references for the DigitalTwin.
+                items:
+                  description: "ObjectReference contains enough information to let
+                    you inspect or modify the referred object. --- New uses of this
+                    type are discouraged because of difficulty describing its usage
+                    when embedded in APIs. 1. Ignored fields.  It includes many fields
+                    which are not generally honored.  For instance, ResourceVersion
+                    and FieldPath are both very rarely valid in actual usage. 2. Invalid
+                    usage help.  It is impossible to add specific help for individual
+                    usage.  In most embedded usages, there are particular restrictions
+                    like, \"must refer only to types A and B\" or \"UID not honored\"
+                    or \"name must be restricted\". Those cannot be well described
+                    when embedded. 3. Inconsistent validation.  Because the usages
+                    are different, the validation rules are different by usage, which
+                    makes it hard for users to predict what will happen. 4. The fields
+                    are both imprecise and overly precise.  Kind is not a precise
+                    mapping to a URL. This can produce ambiguity during interpretation
+                    and require a REST mapping.  In most cases, the dependency is
+                    on the group,resource tuple and the version of the actual struct
+                    is irrelevant. 5. We cannot easily change it.  Because this type
+                    is embedded in many locations, updates to this type will affect
+                    numerous schemas.  Don't make new APIs embed an underspecified
+                    API type they do not control. \n Instead of using this type, create
+                    a locally provided and used type that is well-focused on your
+                    reference. For example, ServiceReferences for admission registration:
+                    https://github.com/kubernetes/api/blob/release-1.17/admissionregistration/v1/types.go#L533
+                    ."
+                  properties:
+                    apiVersion:
+                      description: API version of the referent.
+                      type: string
+                    fieldPath:
+                      description: 'If referring to a piece of an object instead of
+                        an entire object, this string should contain a valid JSON/Go
+                        field access statement, such as desiredState.manifest.containers[2].
+                        For example, if the object reference is to a container within
+                        a pod, this would take on a value like: "spec.containers{name}"
+                        (where "name" refers to the name of the container that triggered
+                        the event) or if no container name is specified "spec.containers[2]"
+                        (container with index 2 in this pod). This syntax is chosen
+                        only to have some well-defined way of referencing a part of
+                        an object. TODO: this design is not final and this field is
+                        subject to change in the future.'
+                      type: string
+                    kind:
+                      description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                      type: string
+                    name:
+                      description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                      type: string
+                    namespace:
+                      description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                      type: string
+                    resourceVersion:
+                      description: 'Specific resourceVersion to which this reference
+                        is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                      type: string
+                    uid:
+                      description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                      type: string
+                  type: object
+                  x-kubernetes-map-type: atomic
+                type: array
               modelType:
-                description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
-                  Important: Run "make" to regenerate code after modifying this file'
+                description: ModelType defines the type of the DigitalTwin model.
                 type: string
             type: object
           status:
-            description: DigitalTwinStatus defines the observed state of DigitalTwin
+            description: Status defines the status of the DigitalTwin.
             type: object
         type: object
     served: true
@@ -503,8 +627,7 @@ spec:
                 description: EnableCostCalculation defines teh flag of cost calculation.
                 type: boolean
               endTime:
-                description: 'EndTime defines the end of the Experiment. TODO: Add
-                  microservice to calculate the end time of the experiment.'
+                description: EndTime defines the end of the Experiment.
                 format: date-time
                 type: string
               experimentState:
@@ -2316,12 +2439,11 @@ spec:
           metadata:
             type: object
           spec:
-            description: PlantDCoreSpec defines the desired state of PlantDCore
+            description: Spec defines the specifications of the PlantDCore.
             properties:
               kubeProxy:
-                description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
-                  Important: Run "make" to regenerate code after modifying this file
-                  KubeProxyConfig defines the desire state of PlantD Kube Proxy'
+                description: KubeProxyConfig defines the desire state of PlantD Kube
+                  Proxy
                 properties:
                   image:
                     description: Image defines the container image to use
@@ -2564,7 +2686,7 @@ spec:
                 type: object
             type: object
           status:
-            description: PlantDCoreStatus defines the observed state of PlantDCore
+            description: Status defines the status of the PlantDCore.
             properties:
               kubeProxyReady:
                 description: KubeProxyReady shows if the PlantD Kube Proxy is ready
@@ -2729,11 +2851,11 @@ spec:
           metadata:
             type: object
           spec:
-            description: ExperimentSpec defines the desired state of Experiment
+            description: Spec defines the specifications of the Simulation.
             properties:
               digitalTwinRef:
-                description: LoadPatterns defines a list of configuration of name
-                  of endpoints and LoadPatterns.
+                description: DigitalTwinRef defines the DigitalTwin object reference
+                  for the Simulation.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -2769,12 +2891,9 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
-              scheduledTime:
-                description: ScheduledTime defines the scheduled time for the Experiment.
-                format: date-time
-                type: string
               trafficModelRef:
-                description: PipelineRef defines s reference of the Pipeline object.
+                description: TrafficModelRef defines the TrafficModel object reference
+                  for the Simulation.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -2815,17 +2934,19 @@ spec:
             - trafficModelRef
             type: object
           status:
-            description: SimulationStatus defines the observed state of Simulation
+            description: Status defines the status of the Simulation.
             properties:
-              digitaltwinState:
+              digitalTwinState:
+                description: DigitalTwinState is the state of the DigitalTwin.
                 type: string
               jobStatus:
-                description: JobStatus defines the status of the cost calculation
-                  job.
+                description: JobStatus is the status of the digital twin job.
                 type: string
               podName:
+                description: PodName is the pod name of the digital twin job.
                 type: string
-              trafficmodalState:
+              trafficModalState:
+                description: TrafficModelState is the state of the TrafficModel.
                 type: string
             type: object
         type: object
@@ -2867,13 +2988,14 @@ spec:
           metadata:
             type: object
           spec:
-            description: TrafficModelSpec defines the desired state of TrafficModel
+            description: Spec defines the specifications of the TrafficModel.
             properties:
               config:
+                description: Config defines the configuration of the TrafficModel.
                 type: string
             type: object
           status:
-            description: TrafficModelStatus defines the observed state of TrafficModel
+            description: Status defines the status of the TrafficModel.
             type: object
         type: object
     served: true
