--- a/config/crd/bases/windtunnel.plantd.org_simulations.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_simulations.yaml
@@ -45,11 +45,11 @@ spec:
           metadata:
             type: object
           spec:
-            description: ExperimentSpec defines the desired state of Experiment
+            description: Spec defines the specifications of the Simulation.
             properties:
               digitalTwinRef:
-                description: LoadPatterns defines a list of configuration of name
-                  of endpoints and LoadPatterns.
+                description: DigitalTwinRef defines the DigitalTwin object reference
+                  for the Simulation.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -85,12 +85,9 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
-              scheduledTime:
-                description: ScheduledTime defines the scheduled time for the Experiment.
-                format: date-time
-                type: string
               trafficModelRef:
-                description: PipelineRef defines s reference of the Pipeline object.
+                description: TrafficModelRef defines the TrafficModel object reference
+                  for the Simulation.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -131,17 +128,19 @@ spec:
             - trafficModelRef
             type: object
           status:
-            description: SimulationStatus defines the observed state of Simulation
+            description: Status defines the status of the Simulation.
             properties:
-              digitaltwinState:
+              digitalTwinState:
+                description: DigitalTwinState is the state of the DigitalTwin.
                 type: string
               jobStatus:
-                description: JobStatus defines the status of the cost calculation
-                  job.
+                description: JobStatus is the status of the digital twin job.
                 type: string
               podName:
+                description: PodName is the pod name of the digital twin job.
                 type: string
-              trafficmodalState:
+              trafficModalState:
+                description: TrafficModelState is the state of the TrafficModel.
                 type: string
             type: object
         type: object
