--- a/config/crd/bases/windtunnel.plantd.org_trafficmodels.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_trafficmodels.yaml
@@ -32,13 +32,14 @@ spec:
           metadata:
             type: object
           spec:
-            description: TrafficModelSpec defines the desired state of TrafficModel
+            description: Spec defines the specifications of the TrafficModel.
             properties:
               config:
+                description: Config defines the configuration of the TrafficModel.
                 type: string
             type: object
           status:
-            description: TrafficModelStatus defines the observed state of TrafficModel
+            description: Status defines the status of the TrafficModel.
             type: object
         type: object
     served: true
