--- a/.github/workflows/release-ghcr.yaml
+++ b/.github/workflows/release-ghcr.yaml
@@ -13,7 +13,7 @@ env:
   IMAGE_NAME_DATA_GENERATOR: ${{ github.repository_owner }}/datagenerator
   IMAGE_NAME_COST_EXPORTER: ${{ github.repository_owner }}/costexporter
   IMAGE_NAME_DIGITAL_TWIN: ${{ github.repository_owner }}/digitaltwin
-  DOCKER_IMAGE_TAGS: |
+  IMAGE_TAGS: |
     type=semver,pattern={{version}}
     type=sha,prefix=,suffix=,format=short
   DOCKER_PLATFORMS: linux/amd64,linux/arm64
@@ -38,7 +38,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PLANTD_CONTROLLER }}
-          tags: ${{ env.DOCKER_IMAGE_TAGS }}
+          tags: ${{ env.IMAGE_TAGS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
@@ -68,7 +68,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PLANTD_PROXY }}
-          tags: ${{ env.DOCKER_IMAGE_TAGS }}
+          tags: ${{ env.IMAGE_TAGS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
@@ -99,7 +99,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_DATA_GENERATOR }}
-          tags: ${{ env.DOCKER_IMAGE_TAGS }}
+          tags: ${{ env.IMAGE_TAGS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
@@ -130,7 +130,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_DIGITAL_TWIN }}
-          tags: ${{ env.DOCKER_IMAGE_TAGS }}
+          tags: ${{ env.IMAGE_TAGS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
@@ -161,7 +161,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_COST_EXPORTER }}
-          tags: ${{ env.DOCKER_IMAGE_TAGS }}
+          tags: ${{ env.IMAGE_TAGS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
@@ -173,67 +173,3 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-  build-and-push-digital-twin-beta:
-    if: github.ref != 'refs/heads/main'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Log in to the container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract metadata (tags, labels)
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_DIGITAL_TWIN }}
-          tags: ${{ env.DOCKER_IMAGE_TAGS }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          file: build/Dockerfile.DigitalTwin
-          context: .
-          platforms: ${{ env.DOCKER_PLATFORMS }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }} 
-  build-and-push-cost-exporter-beta:
-    if: github.ref != 'refs/heads/main'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Log in to the container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract metadata (tags, labels)
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_COST_EXPORTER }}
-          tags: ${{ env.DOCKER_IMAGE_TAGS }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          file: build/Dockerfile.CostExporter
-          context: .
-          platforms: ${{ env.DOCKER_PLATFORMS }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}  
