chore: cleanup sample manifests

--- a/config/samples/incluster/windtunnel_v1alpha1_simulation.yaml
+++ b/config/samples/incluster/windtunnel_v1alpha1_simulation.yaml
@@ -1,12 +1,7 @@
 apiVersion: windtunnel.plantd.org/v1alpha1
 kind: Simulation
 metadata:
-  labels:
-    app.kubernetes.io/name: simulation
-    app.kubernetes.io/instance: simulation-sample
-    app.kubernetes.io/part-of: plantd-operator
-    app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/created-by: plantd-operator
+  namespace: test-pipeline
   name: simulation-incluster
 spec:
   trafficModelRef: 
