--- a/config/samples/incluster/windtunnel_v1alpha1_digitaltwin.yaml
+++ b/config/samples/incluster/windtunnel_v1alpha1_digitaltwin.yaml
@@ -1,14 +1,10 @@
 apiVersion: windtunnel.plantd.org/v1alpha1
 kind: DigitalTwin
 metadata:
-  labels:
-    app.kubernetes.io/name: digitaltwin
-    app.kubernetes.io/instance: digitaltwin-sample
-    app.kubernetes.io/part-of: plantd-operator
-    app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/created-by: plantd-operator
+  namespace: test-pipeline
   name: digitaltwin-incluster
 spec:
-  modelType: "quickscaling"
-  loadPatternNames: "test-pipeline.loadpattern-test-pipeline"
-  experimentNames: "test-pipeline.experiment-test-pipeline-2"
+  modelType: quickscaling
+  experiments:
+    - namespace: test-pipeline
+      name: experiment-test-pipeline
