Move config to yaml

--- a/config/crd/bases/windtunnel.plantd.org_plantdcores.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_plantdcores.yaml
@@ -327,6 +327,8 @@ spec:
               thanosStatus:
                 description: Thanos status
                 type: string
+            required:
+            - thanosStatus
             type: object
         type: object
     served: true
