--- a/bundle.yaml
+++ b/bundle.yaml
@@ -716,6 +716,70 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.12.0
+  name: netcosts.windtunnel.plantd.org
+spec:
+  group: windtunnel.plantd.org
+  names:
+    kind: NetCost
+    listKind: NetCostList
+    plural: netcosts
+    singular: netcost
+  scope: Namespaced
+  versions:
+  - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: NetCost is the Schema for the netcosts API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: NetCostSpec defines the desired state of NetCost
+            properties:
+              netCostPerMB:
+                description: NetCostPerMB defines the cost per MB of data transfer.
+                type: string
+              processedDataRetentionPolicyMonths:
+                description: ProcessedDataRetentionPolicyMonths defines the months
+                  processed data is retained.
+                type: integer
+              processedDataStoreCostPerMB:
+                description: ProcessedDataStoreCostPerMB defines the cost per MB of
+                  processed data storage.
+                type: string
+              rawDataRetentionPolicyMonths:
+                description: RawDataRetentionPolicyMonths defines the months raw data
+                  is retained.
+                type: integer
+              rawDataStoreCostPerMB:
+                description: RawDataStoreCostPerMB defines the cost per MB of raw
+                  data storage.
+                type: string
+            type: object
+          status:
+            description: NetCostStatus defines the observed state of NetCost
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.12.0
   name: pipelines.windtunnel.plantd.org
 spec:
   group: windtunnel.plantd.org
@@ -2509,6 +2573,9 @@ spec:
                         type: object
                     type: object
                 type: object
+              thanosEnabled:
+                description: ThanosEnabled defines if Thanos is enabled (True / False)
+                type: boolean
             type: object
           status:
             description: Status defines the status of the PlantDCore.
@@ -2537,6 +2604,139 @@ spec:
               studioStatus:
                 description: StudioStatus shows the status of the PlantD Studio
                 type: string
+              thanosReady:
+                description: ThanosReady shows if the Thanos is ready
+                type: boolean
+              thanosStatus:
+                description: Thanos status
+                type: string
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.12.0
+  name: scenarios.windtunnel.plantd.org
+spec:
+  group: windtunnel.plantd.org
+  names:
+    kind: Scenario
+    listKind: ScenarioList
+    plural: scenarios
+    singular: scenario
+  scope: Namespaced
+  versions:
+  - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: Scenario is the Schema for the scenarios API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: ScenarioSpec defines the desired state of Scenario
+            properties:
+              dataSetConfig:
+                description: DataSetConfig defines the parameters to generate DataSet.
+                properties:
+                  compressPerSchema:
+                    type: boolean
+                  compressedFileFormat:
+                    type: string
+                  fileFormat:
+                    type: string
+                type: object
+              pipelineRef:
+                description: PipelineRef defines the reference to the Pipeline object.
+                properties:
+                  apiVersion:
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: 'If referring to a piece of an object instead of
+                      an entire object, this string should contain a valid JSON/Go
+                      field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within
+                      a pod, this would take on a value like: "spec.containers{name}"
+                      (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]"
+                      (container with index 2 in this pod). This syntax is chosen
+                      only to have some well-defined way of referencing a part of
+                      an object. TODO: this design is not final and this field is
+                      subject to change in the future.'
+                    type: string
+                  kind:
+                    description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                    type: string
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                  resourceVersion:
+                    description: 'Specific resourceVersion to which this reference
+                      is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                    type: string
+                  uid:
+                    description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
+              tasks:
+                description: Tasks defines the list of tasks to be executed in the
+                  Scenario.
+                items:
+                  description: ScenarioTask defines the task to be executed in the
+                    Scenario
+                  properties:
+                    monthsRelevant:
+                      description: MonthsRelevant defines the months the task is relevant.
+                      items:
+                        type: integer
+                      type: array
+                    name:
+                      description: Name defines the name of the task.
+                      type: string
+                    pushFrequencyPerMonth:
+                      additionalProperties:
+                        type: integer
+                      description: PushFrequencyPerMonth defines the range of how
+                        many times the data is pushed per month.
+                      type: object
+                    sendingDevices:
+                      additionalProperties:
+                        type: integer
+                      description: SendingDevices defines the range of the devices
+                        to send the data.
+                      type: object
+                    sizeKB:
+                      description: SizeKB defines the size of a single upload in KB.
+                      type: integer
+                  type: object
+                type: array
+            required:
+            - dataSetConfig
+            - pipelineRef
+            type: object
+          status:
+            description: ScenarioStatus defines the observed state of Scenario
             type: object
         type: object
     served: true
@@ -3241,6 +3441,32 @@ rules:
   - windtunnel.plantd.org
   resources:
   - plantdcores/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - scenarios
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - scenarios/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - scenarios/status
   verbs:
   - get
   - patch
