--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -12,6 +12,8 @@ resources:
 - bases/windtunnel.plantd.org_digitaltwins.yaml
 - bases/windtunnel.plantd.org_simulations.yaml
 - bases/windtunnel.plantd.org_trafficmodels.yaml
+- bases/windtunnel.plantd.org_netcosts.yaml
+- bases/windtunnel.plantd.org_scenarios.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -27,6 +29,8 @@ patches:
 #- patches/webhook_in_trafficmodels.yaml
 #- patches/webhook_in_digitaltwins.yaml
 #- patches/webhook_in_simulations.yaml
+#- path: patches/webhook_in_netcosts.yaml
+#- path: patches/webhook_in_scenarios.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -41,6 +45,8 @@ patches:
 #- patches/cainjection_in_trafficmodels.yaml
 #- patches/cainjection_in_digitaltwins.yaml
 #- patches/cainjection_in_simulations.yaml
+#- path: patches/cainjection_in_netcosts.yaml
+#- path: patches/cainjection_in_scenarios.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
