--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -361,6 +361,32 @@ rules:
 - apiGroups:
   - windtunnel.plantd.org
   resources:
+  - scenarios
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - scenarios/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - scenarios/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
   - schemas
   verbs:
   - create
