--- a/bundle.yaml
+++ b/bundle.yaml
@@ -2753,6 +2753,11 @@ spec:
             type: object
           status:
             description: ScenarioStatus defines the observed state of Scenario
+            properties:
+              isPopulated:
+                description: IsPopulated defines whether the Scenario has populated
+                  the resources.
+                type: boolean
             type: object
         type: object
     served: true
