fix: rbac permission escalation issue

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -3305,6 +3305,7 @@ rules:
   resources:
   - clusterrolebindings
   verbs:
+  - bind
   - create
   - delete
   - get
@@ -3319,6 +3320,7 @@ rules:
   verbs:
   - create
   - delete
+  - escalate
   - get
   - list
   - patch
